Created grunt build file, also update dev dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -22,7 +22,15 @@
   ],
   "author": "Anatolij Ostroumov",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-ngdoc": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-ngdocs": "*",
+    "grunt-contrib-clean": "*"
+  },
   "license": "MIT",
   "contributors": [
     {
